--- a/trunk/poc2/monografia/monografia.bib
+++ b/trunk/poc2/monografia/monografia.bib
@@ -14,6 +14,21 @@
 	year = {1982}
 }
 
+@article{perlinnoise,
+ author = {Perlin, Ken},
+ title = {An image synthesizer},
+ journal = {SIGGRAPH Comput. Graph.},
+ volume = {19},
+ number = {3},
+ year = {1985},
+ issn = {0097-8930},
+ pages = {287--296},
+ doi = {http://doi.acm.org/10.1145/325165.325247},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
+
 @InProceedings{Schneider:2006:FractalTerrain,
   author =       "Jens Schneider and Tobias Boldte and Ruediger Westermann",
   title =        "Real-Time Editing, Synthesis, and Rendering of Infinite Landscapes on {GPU}s",
@@ -22,16 +37,25 @@
 }
 
 
-@book{gpugems3,
-	author = {Nguyen, Hubert },
-	howpublished = {Hardcover},
-	isbn = {0321515269},
-	month = {August},
-	posted-at = {2009-05-26 18:44:45},
-	priority = {2},
+@INBOOK{gpugems3,
+	author = {Ryan Geiss},
 	publisher = {Addison-Wesley Professional},
 	title = {GPU Gems 3},
-	year = {2007}
+	chapter = {1 Generating Complex Procedural Terrains Using the GPU},
+	year = {2007},
+	pages = {7--37}
+}
+
+
+
+@INBOOK{krueger:2005:AGF,
+  author  =  "Jens Kr{\"u}ger and R{\"u}diger Westermann",
+  editor  =  "Matt Pharr",
+  title   =  "{GPUGems 2} : Programming Techniques for High-Performance Graphics and General-Purpose Computation",
+  chapter =  "44 A GPU Framework for Solving Systems of Linear Equations",
+  pages   =  "703--718",
+  publisher = "Addison-Wesley",
+  year =      "2005"
 }
 
 	
@@ -49,61 +73,67 @@
 @misc{geo,
 	title = "geo-spatial data acquisition home",
 	url = "http://emrl.byu.edu/gsda/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{pixar,
 	title = "Pixar Animation Studios",
 	url = "http://www.pixar.com/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{elite,
 	title = "Ian Bell's Elite pages",
 	url = "http://www.iancgbell.clara.net/elite/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
+}
+
+@misc{youtube,
+	title = "YouTube - Infinite Procedural Terrain Generation using the GPU (POC / DCC / UFMG)",
+	url = "http://www.youtube.com/watch?v=IdYP0PUPQpA",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{luke,
 	title = "Procedural content generation",
 	url = "http://lukehalliwell.wordpress.com/2008/08/05/procedural-content-generation/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{figura_perlin,
 	title = "ACMC Projects, CG Rendering of Coral at The University of Queensland",
 	url = "http://www.acmc.uq.edu.au/Projects/CG\_Rendering.html",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{framework,
 	title = "Object Oriented Framework Development",
 	url = "http://www.acm.org/crossroads/xrds7-4/frameworks.html",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{glfw,
 	title = "GLFW - An OpenGL Framework",
 	url = "http://glfw.sourceforge.net/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{anttweakbar,
 	title = "AntTweakBar GUI library to tweak parameters of OpenGL and DirectX applications",
 	url = "http://www.antisphere.com/Wiki/tools:anttweakbar",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{devil,
 	title = "DevIL - A full featured cross-platform Image Library",
 	url = "http://openil.sourceforge.net/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{slopelighting,
 	title = "GameDev.net - 'Slope Lighting' Terrain",
 	url = "http://www.gamedev.net/reference/articles/article1436.asp",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @INPROCEEDINGS{Greuter03undiscoveredworlds,
@@ -190,43 +220,59 @@ Science (IMADA).},
 @misc{speedtree,
 	title = "SpeedTree | IDV, Inc.",
 	url = "http://www.speedtree.com/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{mojoworld,
 	title = "MojoWorld Generator",
 	url = "http://www.mojoworld.org/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{infinity,
 	title = "Infinity",
 	url = "http://www.infinity-universe.com/Infinity/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{spore,
 	title = "The Official Spore and Spore Creature Creator Site",
 	url = "http://www.spore.com/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
+
+@misc{gpugflops,
+	title = "Programming with CUDA",
+	url = "http://theinf2.informatik.uni-jena.de/For_Students-p-9/Lectures/Programming_with_CUDA-p-41/WS_2008_2009.html",
+	urlaccessdate = "25 jun. 2009",
+}
+
+@book{pipeline,
+ author = {Fernando, Randima and Kilgard, Mark J.},
+ title = {The Cg Tutorial: The Definitive Guide to Programmable Real-Time Graphics},
+ year = {2003},
+ isbn = {0321194969},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+ }
+
 
 @misc{perlin,
 	title = "Ken Perlin's homepage",
 	url = "http://mrl.nyu.edu/~perlin/",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{grafocena,
 	title = "OpenSG: Scene Graphs",
 	url = "http://www.opensg.org/doc-1.4.0/PageScenegraph.html",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 @misc{mapaaltura,
 	title = "Student Lesson Guide",
 	url = "http://southport.jpl.nasa.gov/cdrom/sirced03/cdrom/DOCUMENT/HTML/LESSONS/COVERPAG.HTM",
-	urlaccessdate = "23 nov. 2008",
+	urlaccessdate = "25 jun. 2009",
 }
 
 
